<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="${relativePackage}.${activityClass}" >

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/nameHint"
        android:visibility="invisible" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/emailHint"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/favPro"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="@dimen/proSize"
        android:visibility="invisible" />

    <RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible" >

        <RadioButton
            android:id="@+id/radioJava"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/javaName" />

        <RadioButton
            android:id="@+id/radioC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cName" />

        <RadioButton
            android:id="@+id/radioCsh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cSharpName" />
    </RadioGroup>

    <Switch
        android:id="@+id/switch1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/accSear"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/moodText"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:visibility="invisible" />

    <SeekBar
        android:id="@+id/seekBar1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="@integer/seekMax"
        android:visibility="invisible" />

    <Button
        android:id="@+id/button1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:onClick="saveClicked" />

</LinearLayout>
